--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="media">
           <div class="search">
-            <img src="./Images/dp.jpg" alt="">
+            <img src="icons8-user-50.png" alt="">
             <input type="search" placeholder="Start a post">
           </div>
           <div class="posts">
